--- a/package.json
+++ b/package.json
@@ -2,36 +2,43 @@
   "name": "grunt-jira",
   "description": "JIRA integration for Grunt",
   "version": "0.2.0",
+  "keywords": [
+    "grunt",
+    "gruntplugin",
+    "jira"
+  ],
+  "main": "tasks/jira.js",
   "homepage": "https://github.com/ronaldtreur/grunt-jira",
   "author": {
     "name": "Ronald Treur",
-    "email": "ronald@lostparticle.net"
+    "email": "ronald@lostparticle.net",
+    "url": "http://lostparticle.net"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/ronaldtreur/grunt-jira.git"
   },
   "bugs": {
-    "url": "https://github.com/ronaldtreur/grunt-jira/issues"
+    "url": "https://github.com/ronaldtreur/grunt-jira/issues",
+    "email": "ronald@lostparticle.net"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/ronaldtreur/grunt-jira/blob/master/LICENSE"
-    }
-  ],
   "engines": {
     "node": ">= 0.10.0"
   },
-  "peerDependencies": {
-    "grunt": "~0.4.5"
-  },
-  "keywords": [
-    "grunt",
-    "gruntplugin",
-    "jira"
-  ],
+  "licenses": [{
+    "type": "MIT",
+    "url": "https://github.com/ronaldtreur/grunt-jira/blob/master/LICENSE"
+  }],
   "dependencies": {
     "jira": "~0.9.2"
+  },
+  "devDependencies": {
+    "grunt-readme-generator": "^0.3.41"
+  },
+  "peerDependencies": {
+    "grunt": ">=0.4.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
