--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-jira",
   "description": "JIRA integration for Grunt",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "keywords": [
     "grunt",
     "gruntplugin",
@@ -25,15 +25,18 @@
   "engines": {
     "node": ">= 0.10.0"
   },
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/ronaldtreur/grunt-jira/blob/master/LICENSE"
-  }],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/ronaldtreur/grunt-jira/blob/master/LICENSE"
+    }
+  ],
   "dependencies": {
     "jira": "~0.9.2"
   },
   "devDependencies": {
-    "grunt-readme-generator": "^0.3.41"
+    "grunt-readme-generator": "^0.3.41",
+    "grunt-release": "^0.12.0"
   },
   "peerDependencies": {
     "grunt": ">=0.4.0"
