--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-jira",
   "description": "JIRA integration for Grunt",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "keywords": [
     "grunt",
     "gruntplugin",
@@ -16,10 +16,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ronaldtreur/grunt-jira.git"
+    "url": "git://github.com/chwagssd/grunt-jira.git"
   },
   "bugs": {
-    "url": "https://github.com/ronaldtreur/grunt-jira/issues",
+    "url": "https://github.com/chwagssd/grunt-jira/issues",
     "email": "ronald@lostparticle.net"
   },
   "engines": {
@@ -32,7 +32,7 @@
     }
   ],
   "dependencies": {
-    "jira": "~0.9.2"
+    "jira-client": "^1.2.0"
   },
   "devDependencies": {
     "grunt-readme-generator": "^0.3.41",
